# PPCS

./: .gitignore  README.md
Lab1/: Lab1.PRJ  data.adb  main.adb
Lab1/Lab1-Win32(Intel)-Debug/: UNIT.MAP  main.rsp
Lab1/Lab1-Win32(Intel)-Debug/elabinfo/: main.elt
Lab1/Lab1-Win32(Intel)-Release/: UNIT.MAP
Lab2/: Lab2.sln
Lab2/Debug/: Lab2.ilk
Lab2/Lab2/: Lab2.cpp  Lab2.vcxproj  Lab2.vcxproj.filters  functions.cpp  functions.h  stdafx.h
Lab2/Lab2/Debug/: Lab2.pch  lab2.obj.enc  vc141.idb
Lab3/: Lab3.sln
Lab3/Lab3/: Data.cs  Functions.cs  Lab3.csproj  Program.cs  Threads.cs
Lab3/Lab3/Properties/: AssemblyInfo.cs
Lab4/: CMakeLists.txt
Lab4/Lab4/: CMakeLists.txt  Lab4.cpp  functions.cpp  functions.h
Lab5/: Lab5.PRJ  data.adb  data.ads  main.adb
Lab5/Lab5-Win32(Intel)-Debug/: UNIT.MAP
Lab5/Lab5-Win32(Intel)-Debug/elabinfo/: main.elt
Lab7/: data.adb  data.ads  main.adb
Lab7/Lab7-Win32(Intel)-Debug/: UNIT.MAP
Lab7/Lab7-Win32(Intel)-Debug/elabinfo/: main.elt
Lab7/Lab7-Win32(Intel)-Release/: UNIT.MAP  main.rsp
Lab7/Lab7-Win32(Intel)-Release/elabinfo/: main.elt
Lab8/ParallelAndDistributedComputingLab6v2/: Lab8.sln
Lab8/ParallelAndDistributedComputingLab6v2/Debug/: Lab8.ilk  PPCS_CW2.ilk  ParallelAndDistributedComputingLab6v2.ilk
Lab8/ParallelAndDistributedComputingLab6v2/ParallelAndDistributedComputingLab6v2/: ParallelAndDistributedComputingLab6v2.vcxproj  main.cpp  (+2 more)
docx/: Lab2.vsdx  Lab3.vsdx  Lab4.vsdx  Lab5.vsdx  Lab6.vsdx  Lab8.vsdx  lab2-PPKS-Volekss.docx  Лаб1.docx  Лаб2.docx  Лаб3.docx  Лаб4.docx  Лаб5.docx  Лаб6.docx  Лаб8.docx
(+69 files in other folders)
